--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -68,3 +68,9 @@ textarea {
 .fa {
   margin-right: 6px;
 }
+
+// Maps
+// -------------------------
+html, body, .container-fluid, .row, #map {
+  height: 100%;
+}
