--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,7 +6,7 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='theme-color' content='#4DA5F4')
     meta(name='csrf-token', content=_csrf)
-    title #{title} - 'NOM-ADD'
+    title #{title} - Hackathon Starter
     link(rel='shortcut icon', href='/favicon.png')
     link(rel='stylesheet', href='/css/main.css')
 
@@ -22,7 +22,6 @@ html
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
-    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YpBTGnU9slzQ4hmZtZWjMu4jWBEEvjI&callback=initMap')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
