APIs updated map functionality restored

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,6 +22,7 @@ html
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
+    script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyB0YpBTGnU9slzQ4hmZtZWjMu4jWBEEvjI&callback=initMap')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
