--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -71,6 +71,10 @@ textarea {
 
 // Maps
 // -------------------------
-html, body, .container-fluid, .row, #map {
+html, body, .container-fluid, .row {
   height: 100%;
+}
+#map {
+  height: 100%;
+  position: relative;
 }
