--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -14,8 +14,8 @@ html {
 }
 
 body {
-  padding-top: 60px;
-  margin-bottom: 75px;
+  // padding-top: 60px;
+  // margin-bottom: 75px;
 }
 
 footer {
@@ -73,8 +73,12 @@ textarea {
 // -------------------------
 html, body, .container-fluid, .container, .row {
   height: 100%;
+  padding: 0;
+  margin: 0;
 }
 #map {
   height: 100%;
+  padding: 0;
+  margin: 0;
 
 }
