--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8944,8 +8944,28 @@ html, body, .container-fluid, .container, .row {
   padding: 0;
   margin: 0; }
 
+/*.wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}*/
+
 #map {
   height: 100%;
   width: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  position: relative;
+}
+
+#overlay {
+  height: 70%;
+  width: 40%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
+}
