--- a/views/layout.pug
+++ b/views/layout.pug
@@ -23,6 +23,7 @@ html
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
     script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDoy3_ZyjqbrSSJPRhQ2WO0jkboFlmNGGk&callback=initMap')
+    script(async='', defer='', src='https://maps.googleapis.com/maps/api/place/textsearch/xml?query=restaurants+in+Singapore&key=AIzaSyDoy3_ZyjqbrSSJPRhQ2WO0jkboFlmNGGk')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID
     script.
