--- a/views/home.pug
+++ b/views/home.pug
@@ -3,5 +3,8 @@ extends layout
 block content
   .row
     #map.col-sm-12
-    #overlay.col-sm-4
-    #placeinfo.col-sm-4
+    #overlay
+      .col-sm-4
+        test
+      #placeinfo.col-sm-4
+      123
