--- a/views/home.pug
+++ b/views/home.pug
@@ -2,9 +2,10 @@ extends layout
 
 block content
   .row
+    #overlay1.col-sm-4
+      span
+        TEST
+    #overlay2.col-sm-4.col-sm-offset-8
+      span
+        NOM LATER
     #map.col-sm-12
-    #overlay
-      .col-sm-4
-        test
-      #placeinfo.col-sm-4
-      123
