--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8944,14 +8944,6 @@ html, body, .container-fluid, .container, .row {
   padding: 0;
   margin: 0; }
 
-/*.wrapper {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}*/
-
 #map {
   height: 100%;
   width: 100%;
@@ -8971,11 +8963,12 @@ html, body, .container-fluid, .container, .row {
   z-index: 99;
 }
 #overlay2 {
+  display: inline;
   height: 10%;
-  width: 100%;
+  width: 30%;
   position: absolute;
   top: 60px;
-  left: 0;
+  left: 10%;
   z-index: 99;
 }
 
