google places api added, not integrated

--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
     #overlay1.col-sm-3
       span TEST
     #overlay2.col-sm-offset-3.col-sm-6
-      h2 Custom search field
+      h3 NOM-ADD: Add Now, Nom Later
       #custom-search-input
         .input-group.col-md-12
           input.form-control.input-lg(type='text', placeholder='Find noms')
