--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html
   body
     include partials/header
 
-    .container
+    .container#main
       include partials/flash
       block content
 
