able to append to bookmarks list

--- a/views/home.pug
+++ b/views/home.pug
@@ -6,7 +6,7 @@ block content
     #map.col-sm-12
     #overlay1.col-sm-3
       h3 Your Saved Noms
-      #productRowTpl
+      #bookmarkRowTpl
         .row.product(data-id='{{Id}}')
           .col-md-3.eateryname {{Name}}
           .col-md-3.address {{Address}}
