--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -9,7 +9,7 @@ meta(name='csrf-token', content='{{csrf_token()}}')
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-        i.fa.fa-cube
+        i.fa.fa-hand-peace-o
         | NOM-ADD: Add Now, Nom Later
     .collapse.navbar-collapse
       ul.nav.navbar-nav
