bookmarks list cleaned up

--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,7 @@ block content
     #overlay1.col-sm-3
       h3 Your Saved Noms
       #bookmarkRowTpl
-        .row.nommark(data-id='{{Id}}')
+        .row.nommark(data-id='{{Id}}' style='display:none;')
           .col-md-3.eateryname {{Name}}
           .col-md-3.address {{Address}}
           .form-group
